--- a/number-theory/homework/homework1.tex
+++ b/number-theory/homework/homework1.tex
@@ -213,8 +213,25 @@ This section has \numpoints\ points.
         for $r^2 + 2$ are: 2, 3, 6 and 11. If $n^2 + 2$ were divisible
         by 4, then by the linear combination rule of divisbility, we'd
         have that $n^2 +2 - 4(4q^2 + 2qr) = r^2 + 2$ were divisible by
-        4. Howeer, by exhaustion 2, 3, 6, and 11 are not. 
+        4. However, by exhaustion 2, 3, 6, and 11 are not. 
     \end{solution}
+\end{questions}
+
+\section{Lecture 2}
+
+\begin{questions}
+
+% Existence of greatest common divisor
+
+
+% Existence of gcd as a linear combination
+% $(ma, mb) = m(a, b)$
+% $(a, m) = 1 = (b, m)$ then $(ab, m) = 1$
+% Definition of relatively prime.
+% Adding some combination of $a$ to $b$ does not change the gcd of
+%     $a$ and $b$.
+% The Euclidean Algorithm
+
 \end{questions}
 
 \end{document}
