--- a/number-theory/week1/quiz.tex
+++ b/number-theory/week1/quiz.tex
@@ -9,6 +9,20 @@
 \begin{questions}
   \question[5] State the division algorithm
 
+  \question[5] Prove that, for all positive integers $n$,
+  $$1^3 + 2^3 + \cdots + n^3 = \frac{n^2(n+1)^2}{4}.$$
+  \begin{solution}
+    Base case: $1^3 = \frac{1^2(2)^2}{4} = 1$.
+
+    Induction Step: 
+    $$\sum_{k=1}^{n+1} k^3 = (n+1)^3 + \sum_{k=1}^n k^3$$
+    $$  (n+1)^3 + \frac{n^2(n+1)^2}{4}
+    = \frac{ 4(n+1)^3 + n^2(n+1)^2 }{4}$$
+    $$ = \frac{ (n+1)^2 ( 4(n+1) + n^2 ) }{4}
+    = \frac{ (n+1)^2 (n+2)^2 }{4}.$$        
+  \end{solution}
+
+
   \question[5]  State the M\'eziriac-B\'ezout identity.
 
 
