added algorithm to the template

--- a/number-theory/template.tex
+++ b/number-theory/template.tex
@@ -74,6 +74,7 @@
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{algorithm}[theorem]{Algorithm}
 
 %%% END Article customizations
 
